fix popover title and flicker, minor other code tidies following PR
also add message for freeform tile

--- a/ui-modules/blueprint-composer/app/components/catalog-selector/catalog-selector.less
+++ b/ui-modules/blueprint-composer/app/components/catalog-selector/catalog-selector.less
@@ -288,9 +288,10 @@ catalog-selector {
         border-bottom: 1px solid @popover-border-color;
         margin-left: -15px;
         margin-right: -15px;
-        margin-top: -3px;
+        margin-top: -10px;
         margin-bottom: 12px;
-        padding: 0px 16px 6px 16px;
+        padding: 8px 16px 6px 16px;
+        border-radius: 5px 5px 0 0;
         .closer {
             margin-top: 6px;
         }
